<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.net.mercuryworld.chsc.UpdateBookingActivity">


    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/update_booking_form_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/update_booking_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/centerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_center"
                android:focusable="false"
                android:maxLines="1" />

            <EditText
                android:id="@+id/farmerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_farmer_name"
                android:focusable="false"
                android:maxLines="1" />

            <EditText
                android:id="@+id/farmerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/prompt_farmer_phone" />

            <EditText
                android:id="@+id/farmerVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_farmer_village"
                android:focusable="false"
                android:maxLines="1" />

            <EditText
                android:id="@+id/landSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_land_size"
                android:inputType="none" />

            <EditText
                android:id="@+id/crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_crop_type"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/driverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_driver"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/tractor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_tractor"
                android:focusable="false"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/implement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_implement"
                android:focusable="false"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_hours"
                android:focusable="false"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/meterStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_meter_start"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/meterEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_meter_end"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:onClick="showTimePickerDialog"
                android:text="@string/prompt_start_time" />

            <Button
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:onClick="showTimePickerDialog"
                android:text="@string/prompt_end_time" />

            <EditText
                android:id="@+id/bookingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusable="false"
                android:hint="@string/prompt_date"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/updateBookingButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:onClick="updateBooking"
                    android:text="@string/action_update"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_red_light"
                    android:onClick="cancelAction"
                    android:text="@string/action_cancel"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>