<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.net.mercuryworld.chsc.CreateBookingActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/create_booking_form_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/create_booking_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/centerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/farmerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_farmer_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/farmerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_farmer_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/farmerVillage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_farmer_village"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/landSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_land_size"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/crop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_crop_type"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/driverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_driver"
                android:inputType="text"
                android:maxLines="1" />

            <Spinner
                android:id="@+id/tractorId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/implementId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_hours"
                android:inputType="numberDecimal" />

            <!--<EditText
                android:id="@+id/meterStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/prompt_meter_start"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:onClick="showTimePickerDialog"
                android:text="@string/prompt_start_time" />-->

            <Button
                android:id="@+id/bookingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="showDatePickerDialog"
                android:text="@string/prompt_date" />

            <Button
                android:id="@+id/createBookingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="createBooking"
                android:text="@string/action_submit"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>