<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/driverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="0.67"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/default_driver_name"/>

    <TextView
        android:id="@+id/bookingId"
        android:layout_below="@id/driverName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:text="@string/default_booking_id" />


    <TextView
        android:id="@+id/hours"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/default_hours"/>

</LinearLayout>